# Contexta

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: RC_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  examples.yml  packaging.yml  release.yml  test-matrix.yml
docs/: faq.md  index.md  operations.md  what-is-ml-observability.md
docs/ko/: SECURITY.md  faq.md  index.md  operations.md  what-is-ml-observability.md
docs/reference/: api-reference.md  cli-reference.md  http-reference.md
docs/user-guide/: adapters.md  advanced.md  batch-sample-deployment.md  case-studies.md  common-workflows.md  core-concepts.md  getting-started.md  index.md  key-features.md  notebook.md  testing.md  tools-and-surfaces.md
examples/: pyproject.toml
examples/adapters/: README.md  mlflow_sink_demo.py  otel_sink_demo.py  stdout_sink_demo.py
examples/batch_sample/: README.md  batch_sample_demo.py
examples/case_studies/: README.md  case01_scattered_experiments.py  case02_performance_regression.py  case03_silent_pipeline_failure.py  case04_deployment_traceability.py  case05_deployment_gate.py  case06_compliance_audit.py  case07_batch_job_monitoring.py  case08_upstream_contamination.py  case09_llm_per_prompt_evaluation.py  case10_rag_pipeline_decomposition.py  case11_project_history_onboarding.py  case12_delivery_quality_certificate.py
examples/quickstart/: README.md  qs01_sklearn_tabular.py  qs02_pytorch_cnn.py  qs03_bert_finetuning.py  qs04_llm_evaluation.py  runtime_capture_preview.py  verified_quickstart.py
examples/quickstart/.contexta/cnn-image-clf/records/: manifest.json
examples/quickstart/.contexta/cnn-image-clf/records/indexes/record_type/: degraded.jsonl  metric.jsonl
examples/quickstart/.contexta/cnn-image-clf/records/indexes/run_ref/: run__cnn-image-clf.cnn-v1.jsonl
examples/quickstart/.contexta/cnn-image-clf/records/indexes/stage_execution_ref/: stage__cnn-image-clf.cnn-v1.evaluate.jsonl  stage__cnn-image-clf.cnn-v1.preprocess.jsonl  stage__cnn-image-clf.cnn-v1.train.jsonl
examples/quickstart/.contexta/cnn-image-clf/records/segments/: segment-000001.jsonl
examples/quickstart/.contexta/wine-quality-clf/records/: manifest.json
examples/quickstart/.contexta/wine-quality-clf/records/indexes/record_type/: event.jsonl  metric.jsonl
examples/quickstart/.contexta/wine-quality-clf/records/indexes/run_ref/: run__wine-quality-clf.rf-experiment.jsonl  run__wine-quality-clf.svm-baseline.jsonl
examples/quickstart/.contexta/wine-quality-clf/records/indexes/stage_execution_ref/: stage__wine-quality-clf.rf-experiment.evaluate.jsonl  stage__wine-quality-clf.rf-experiment.preprocess.jsonl  stage__wine-quality-clf.rf-experiment.train.jsonl  stage__wine-quality-clf.svm-baseline.evaluate.jsonl  stage__wine-quality-clf.svm-baseline.preprocess.jsonl  stage__wine-quality-clf.svm-baseline.train.jsonl
examples/quickstart/.contexta/wine-quality-clf/records/segments/: segment-000001.jsonl
examples/recovery/: README.md  artifact_transfer_demo.py  backup_restore_verify.py  replay_outbox_demo.py
src/contexta/: __init__.py  __main__.py
tests/: conftest.py
tests/adapters/: test_imports.py  test_mlflow_sink.py  test_otel_sink.py
tests/api/: test_facade.py
tests/capture/: test_event_metric.py  test_span_artifact.py
tests/contract/: test_artifact_models.py  test_context_models.py  test_record_models.py  test_refs.py  test_serialization.py  test_validation.py
(+192 files in other folders)
